--- a/party-guthaben.html
+++ b/party-guthaben.html
@@ -6,7 +6,6 @@
 <style>
 body { font-family: Arial, sans-serif; margin:20px; }
 button { padding:14px 22px; margin:6px; font-size:16px; }
-button:disabled { opacity:0.4; }
 #qr-reader { width:320px; margin-top:15px; }
 #gast { margin-top:20px; display:none; }
 #produkte { margin-top:15px; }
@@ -18,7 +17,7 @@ button:disabled { opacity:0.4; }
 
 <h2>Party Guthaben</h2>
 
-<button id="scanBtn" onclick="startScan()" style="display:none;">QR-Code scannen</button>
+<button id="scanBtn" onclick="startScan()">QR-Code scannen</button>
 <div id="qr-reader"></div>
 
 <div id="status"></div>
@@ -35,44 +34,32 @@ button:disabled { opacity:0.4; }
 
 <script src="https://unpkg.com/html5-qrcode"></script>
 <script>
-/* =======================
-   🔐 PIN-SCHUTZ
-   ======================= */
 const APP_PIN = "739284";
-(function checkPIN(){
-  const pin = prompt("6-stellige PIN eingeben:");
-  if(pin !== APP_PIN){
-    document.body.innerHTML="<h2>Zugriff verweigert</h2>";
-    throw new Error("Falscher PIN");
-  }
-  document.getElementById('scanBtn').style.display='inline-block';
-})();
 
-/* =======================
-   KONFIG
-   ======================= */
-const sheetUrl =
-'https://script.google.com/macros/s/AKfycbxyfH6JI8RO10ZNmdjl2MPJ5nL6323UvJcpsuXl6LUbPM7UvLB6oYYdRhrUzbEevinlSA/exec';
+/* PIN-Abfrage */
+const pin = prompt("6-stellige PIN eingeben:");
+if(pin !== APP_PIN){
+  document.body.innerHTML="<h2>Zugriff verweigert</h2>";
+  throw new Error("Falscher PIN");
+}
 
+/* CONFIG */
+const sheetUrl = 'https://script.google.com/macros/s/AKfycbxyfH6JI8RO10ZNmdjl2MPJ5nL6323UvJcpsuXl6LUbPM7UvLB6oYYdRhrUzbEevinlSA/exec';
 let currentId = '';
 let guthaben = 0;
 let scanner = null;
 let offlineQueue = JSON.parse(localStorage.getItem('offlineQueue') || '[]');
 
-/* =======================
-   STATUS
-   ======================= */
+/* STATUS */
 function updateStatus(){
   document.getElementById('status').textContent =
-    navigator.onLine ? '🟢 Online' : '🔴 Offline – Buchungen werden gespeichert';
+    navigator.onLine ? '🟢 Online' : '🔴 Offline – Buchungen gespeichert';
 }
 window.addEventListener('online', syncOffline);
 window.addEventListener('offline', updateStatus);
 updateStatus();
 
-/* =======================
-   QR SCAN
-   ======================= */
+/* QR SCAN */
 function startScan(){
   if(scanner) return;
   scanner = new Html5Qrcode("qr-reader");
@@ -87,9 +74,7 @@ function startScan(){
   );
 }
 
-/* =======================
-   GAST
-   ======================= */
+/* GAST LADEN */
 function loadGast(){
   document.getElementById('gast').style.display='block';
   document.getElementById('name').textContent=currentId;
@@ -108,9 +93,7 @@ function loadGast(){
     });
 }
 
-/* =======================
-   PRODUKTE
-   ======================= */
+/* PRODUKTE RENDERN */
 function renderProdukte(list){
   const div=document.getElementById('produkte');
   div.innerHTML='<h4>Produkte</h4>';
@@ -122,9 +105,7 @@ function renderProdukte(list){
   });
 }
 
-/* =======================
-   AKTIONEN
-   ======================= */
+/* AKTIONEN */
 function aktion(type, wert=0, produkt=''){
   if(!navigator.onLine){
     offlineQueue.push({type, wert, produkt, id:currentId});
@@ -151,9 +132,7 @@ function auszahlen(){
   }
 }
 
-/* =======================
-   OFFLINE SYNC
-   ======================= */
+/* OFFLINE SYNC */
 function syncOffline(){
   updateStatus();
   while(offlineQueue.length){
