--- a/party_guthaben_party.html
+++ b/party_guthaben_party.html
@@ -21,7 +21,7 @@ textarea { width:100%; height:60px; margin-top:10px; font-size:16px; resize:none
 
 <body>
 
-<h2>Party Guthaben</h2>
+<h2>🔥 NEUE VERSION LÄUFT 🔥</h2>
 
 <button id="scanBtn" class="button-green" onclick="startScan()">📷 QR-Code scannen</button>
 <div id="qr-reader"></div>
@@ -170,4 +170,5 @@ notiz.addEventListener('input', ()=>{
 renderProdukte();
 </script>
 </body>
+
 </html>
