--- a/party_guthaben_party.html
+++ b/party_guthaben_party.html
@@ -3,19 +3,49 @@
 <head>
 <meta charset="UTF-8">
 <title>Party Guthaben Party</title>
+
 <style>
-body { font-family: Arial, sans-serif; margin:20px; background: #a0c4ff url('https://i.ibb.co/YdT7sK3/paisley-mini.png') repeat; color: #000; }
-h2,h3 { text-shadow: 1px 1px 2px #fff; }
-button { padding:16px 24px; margin:6px; font-size:18px; border:none; border-radius:6px; cursor:pointer; }
-#qr-reader { width:320px; margin-top:15px; }
-#gast { margin-top:20px; display:none; }
-#produkte { margin-top:15px; }
-#status { font-weight:bold; margin-top:10px; }
-.button-green { background-color:#4CAF50; color:#fff; } 
-.button-red { background-color:#f44336; color:#fff; }  
-.button-orange { background-color:#FF9800; color:#fff; } 
-textarea { width:100%; height:60px; margin-top:10px; font-size:16px; resize:none; }
-#notiz-counter { font-size:14px; margin-top:4px; }
+body {
+  font-family: Arial, sans-serif;
+  margin: 20px;
+  background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+  color: #fff;
+}
+
+h2, h3 {
+  text-shadow: 1px 1px 2px #000;
+}
+
+button {
+  padding: 16px 24px;
+  margin: 6px;
+  font-size: 18px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.button-green { background-color: #2ecc71; color: #000; }
+.button-red   { background-color: #e74c3c; color: #000; }
+.button-orange{ background-color: #f39c12; color: #000; }
+
+#qr-reader { width: 320px; margin-top: 15px; }
+#status { margin-top: 10px; font-weight: bold; }
+
+#gast { display: none; margin-top: 20px; }
+
+textarea {
+  width: 100%;
+  height: 70px;
+  font-size: 16px;
+  resize: none;
+  margin-top: 10px;
+}
+
+#notiz-counter {
+  font-size: 14px;
+  margin-top: 4px;
+}
 </style>
 </head>
 
@@ -23,7 +53,7 @@ textarea { width:100%; height:60px; margin-top:10px; font-size:16px; resize:none
 
 <h2>🔥 NEUE VERSION LÄUFT 🔥</h2>
 
-<button id="scanBtn" class="button-green" onclick="startScan()">📷 QR-Code scannen</button>
+<button class="button-green" onclick="startScan()">📷 QR-Code scannen</button>
 <div id="qr-reader"></div>
 
 <div id="status"></div>
@@ -40,136 +70,128 @@ textarea { width:100%; height:60px; margin-top:10px; font-size:16px; resize:none
   <p><b>Zwischensumme:</b> <span id="summe">0.00</span> €</p>
   <button class="button-orange" onclick="buchen()">Buchen ✅</button>
 
-  <textarea id="notiz" placeholder="Notizen eingeben..." maxlength="500"></textarea>
+  <textarea id="notiz" placeholder="Notizen (max. 500 Zeichen)" maxlength="500"></textarea>
   <div id="notiz-counter">500 Zeichen übrig</div>
 </div>
 
 <script src="https://unpkg.com/html5-qrcode"></script>
 <script>
+/* ===== PIN ===== */
 const APP_PIN = "739284";
-
-/* PIN-Abfrage */
 const pin = prompt("6-stellige PIN eingeben:");
-if(pin !== APP_PIN){
-  document.body.innerHTML="<h2>Zugriff verweigert</h2>";
+if (pin !== APP_PIN) {
+  document.body.innerHTML = "<h2>Zugriff verweigert</h2>";
   throw new Error("Falscher PIN");
 }
 
-/* CONFIG */
-let currentId = '';
+/* ===== STATE ===== */
+let currentId = "";
 let guthaben = 20;
-let offlineQueue = JSON.parse(localStorage.getItem('offlineQueue') || '[]');
 let summe = 0;
 let scanner = null;
 
-const testProdukte = [
-  {name:"Bier",preise:[1,1.5,2,2.5,3,3.5]},
-  {name:"Wasser",preise:[1,2,3]},
-  {name:"Cocktail",preise:[4.5,5.5,6.5,7.5]},
-  {name:"Shots",preise:[1,1.5,2,2.5]}
+/* ===== PRODUKTE ===== */
+const produkte = [
+  {name:"Bier", preise:[1,1.5,2,2.5,3,3.5]},
+  {name:"Wasser", preise:[1,2,3]},
+  {name:"Cocktail", preise:[4.5,5.5,6.5,7.5]},
+  {name:"Shots", preise:[1,1.5,2,2.5]}
 ];
 
-/* STATUS */
-function updateStatus(){ 
-  document.getElementById('status').textContent = navigator.onLine ? '🟢 Online' : '🔴 Offline – Buchungen gespeichert'; 
+/* ===== STATUS ===== */
+function updateStatus(){
+  document.getElementById("status").textContent =
+    navigator.onLine ? "🟢 Online" : "🔴 Offline – Buchungen werden gemerkt";
 }
-window.addEventListener('online', syncOffline);
-window.addEventListener('offline', updateStatus);
 updateStatus();
+window.addEventListener("online", updateStatus);
+window.addEventListener("offline", updateStatus);
 
-/* QR SCAN */
+/* ===== QR SCAN ===== */
 function startScan(){
-  if(scanner) return;
+  if (scanner) return;
+
   scanner = new Html5Qrcode("qr-reader");
   scanner.start(
     { facingMode: "environment" },
     { fps: 10, qrbox: 250 },
-    text=>{
-      alert("QR-Code erkannt: " + text);
-      scanner.stop().then(()=>scanner.clear());
+    text => {
+      scanner.stop().then(() => scanner.clear());
       currentId = text.trim();
-      document.getElementById('name').textContent = currentId;
-      document.getElementById('gast').style.display='block';
+      document.getElementById("name").textContent = currentId;
+      document.getElementById("gast").style.display = "block";
+      document.getElementById("guthaben").textContent = guthaben.toFixed(2);
+      renderProdukte();
     }
   );
 }
 
-/* PRODUKTE BUTTONS */
+/* ===== PRODUKTBUTTONS ===== */
 function renderProdukte(){
-  const div = document.getElementById('produkte');
-  div.innerHTML="<h4>Produkte</h4>";
-  testProdukte.forEach(p=>{
-    p.preise.forEach(preis=>{
-      const b = document.createElement('button');
+  const div = document.getElementById("produkte");
+  div.innerHTML = "<h4>Produkte</h4>";
+
+  produkte.forEach(p => {
+    p.preise.forEach(preis => {
+      const b = document.createElement("button");
+      b.className = "button-orange";
       b.textContent = `${p.name} – ${preis.toFixed(2)} €`;
-      b.className="button-orange";
-      b.onclick = ()=>{
+      b.onclick = () => {
         summe += preis;
-        document.getElementById('summe').textContent = summe.toFixed(2);
+        document.getElementById("summe").textContent = summe.toFixed(2);
       };
       div.appendChild(b);
     });
   });
 }
 
-/* BUTTON-AKTIONEN */
+/* ===== AKTIONEN ===== */
 function aufladen(){
-  let v = parseFloat(prompt("Betrag aufladen (€):","10"));
-  if(v){ 
-    guthaben += v; 
-    document.getElementById('guthaben').textContent=guthaben.toFixed(2); 
+  const v = parseFloat(prompt("Aufladen (€):", "10"));
+  if (v) {
+    guthaben += v;
+    document.getElementById("guthaben").textContent = guthaben.toFixed(2);
   }
 }
 
 function auszahlen(){
-  if(confirm("Restguthaben auszahlen?")){
+  if (confirm("Guthaben auszahlen und auf 0 setzen?")) {
     guthaben = 0;
-    document.getElementById('guthaben').textContent='0.00';
+    document.getElementById("guthaben").textContent = "0.00";
   }
 }
 
-/* BUCHEN */
 function buchen(){
-  if(summe > guthaben){
+  if (summe > guthaben) {
     alert("Nicht genug Guthaben!");
     return;
   }
   guthaben -= summe;
-  document.getElementById('guthaben').textContent=guthaben.toFixed(2);
-  alert("Vorgang gebucht!");
   summe = 0;
-  document.getElementById('summe').textContent="0.00";
-  document.getElementById('notiz').value = "";
-  document.getElementById('notiz-counter').textContent = "500 Zeichen übrig";
+  document.getElementById("guthaben").textContent = guthaben.toFixed(2);
+  document.getElementById("summe").textContent = "0.00";
+  document.getElementById("notiz").value = "";
+  document.getElementById("notiz-counter").textContent = "500 Zeichen übrig";
+  alert("Gebucht!");
 }
 
-/* OFFLINE SYNC (Dummy) */
-function syncOffline(){ 
-  updateStatus(); 
-  offlineQueue=[]; 
-  localStorage.removeItem('offlineQueue'); 
-}
+/* ===== NOTIZ ===== */
+const notiz = document.getElementById("notiz");
+const counter = document.getElementById("notiz-counter");
 
-/* Notiz dynamische Schriftgröße + Counter */
-const notiz = document.getElementById('notiz');
-const counter = document.getElementById('notiz-counter');
-notiz.addEventListener('input', ()=>{
+notiz.addEventListener("input", () => {
   const len = notiz.value.length;
-  const remaining = 500 - len;
-  counter.textContent = remaining + " Zeichen übrig";
+  counter.textContent = (500 - len) + " Zeichen übrig";
 
-  if(len <= 200){
-    notiz.style.fontSize = '16px';
+  if (len <= 200) {
+    notiz.style.fontSize = "16px";
   } else {
-    let size = 16 - (len-200)/20; 
-    if(size < 8) size = 8;
-    notiz.style.fontSize = size + 'px';
+    let size = 16 - (len - 200) / 20;
+    if (size < 8) size = 8;
+    notiz.style.fontSize = size + "px";
   }
 });
-
-renderProdukte();
 </script>
+
 </body>
-
 </html>
-
